# miniwnd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  main_game_of_life.cpp  main_lotka_volterra.cpp  main_parallel_game_of_life.cpp  miniwindow.h  test.cpp
